Enhancements: 1. change var names and values from black/white to player1/player2 2. Shifted currentPlayer var to be a board model attribute.  3. Added fixed header to UI to show the current score for both players  4. Added arrow  to indicate who the current player is, as well as color coding to match game piece.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,41 @@
-h1, h2 {
+body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+
+#currentPlayer {
   text-align: center;
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+}
+
+.page-header {
+  flex: 0 0 auto;
+  background-color: #dcdcdc;
+}
+
+.page-content {
+  flex: 1 1 auto;
+  position: relative;
+  /* need this to position inner content */
+  overflow-y: auto;
+}
+
+/*Style for header*/
+header {
+  display: block;
+  min-height: 30px;
+  border: 1px solid black;
+  background: darkslategray;
+  text-align: right;
+  color: whitesmoke;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-around;
 }
 
 table, th, td {
@@ -8,12 +44,12 @@ table, th, td {
   margin: auto;
   width: 130px;
   height: 130px;
-  background-color: green;
+  background-color: #ccb647;
   border: 2px solid;
-  border-color: #66b266;
+  border-color: #e5daa3;
 }
 
-.black {
+.player1 {
   border-radius: 50%;
   width: 80px;
   height: 80px;
@@ -22,11 +58,11 @@ table, th, td {
   margin-top: auto;
   margin-bottom: auto;
   /* width and height can be anything, as long as they're equal */
-  background-color: black;
-  box-shadow: "";
+  background-color: #ed8b03;
+  box-shadow: 0px 4px 9px #a56102, inset 0px 3px 4px #f2ad4e;
 }
 
-.white {
+.player2 {
   border-radius: 50%;
   width: 80px;
   height: 80px;
@@ -35,14 +71,33 @@ table, th, td {
   margin-top: auto;
   margin-bottom: auto;
   /* width and height can be anything, as long as they're equal */
-  background-color: white;
-  box-shadow: "";
+  background-color: #95b205;
+  box-shadow: 0px 4px 9px #687c03, inset 0px 3px 4px #b4c950;
 }
 
 td.validMove:hover {
-  background-color: grey;
+  background-color: #e0d390;
   border: dashed;
   border-color: white;
+}
+
+.darkColor {
+  color: #ed8b03;
+}
+
+.lightColor {
+  color: #95b205;
+}
+
+html,
+body,
+.page {
+  height: 100%;
+  /* needed for proper layout */
+}
+
+body {
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=styles.css.map */
